@@ -1,6 +1,7 @@
 Wed April 27 2016
 1. Changes
    * Avoid message from texreg when the R2MLwiN package is loaded
+   * Update model comparisons in demos to use the texreg package
 
 Tue April 26 2016
 1. Changes
